# aics-social-networks-analysis

./: .gitignore  README.md  pyproject.toml
docs/: ΑΝΑΦΟΡΑ_Αποστόλου-Μπιρμπάκος.odt
social_networks_analysis/: constants.py  main.py  run_intro.py  run_part1.py  run_part2.py  run_part3.py  utils.py
social_networks_analysis/__tests__/: test_networkx.py  test_np.py
